--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,15 @@
 img {
   padding: 20px;
 }
+
+/* Footer */
+.footer {
+  padding: 30px;
+  clear: both;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  text-align: center;
+}
+
+.footer h2 {
+  font-size: 20px;
+}
